<resources>
    <string name="app_name">InClass08</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recepe_activity_name">Recipes</string>
    <string name="result_activity_label">Words found</string>
    <string name="text_view_add_words_to_search">Add words to search:</string>
    <string name="check_box_match_case">Match case</string>
    <string name="button_search">Search</string>
    <string name="edit_text_words" />
    <string name="text_view_word_frequencies">Word Frequencies:</string>
    <string name="button_finish">Finish</string>
    <string name="text_view_word_frquencies" />
    <string name="dish"></string>
    <string name="add">Add Ingredients:</string>
    <string name="nothing_found">No instances found</string>

    <string name="finish">Finish</string>
    <string name="titleLabel">Title : </string>
    <string name="title"></string>
    <string name="ingredientsLabel">Ingredients : </string>
    <string name="ingredients"></string>
    <string name="URLlabel">URL : </string>
    <string name="URL"></string>
    <string name="load">Loading...</string>
    <string name="title_activity_recipe">RecipeActivity</string>
</resources>
