<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/textView3"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleLabel"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/textViewTitle"
        android:layout_alignBottom="@+id/textViewTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="45dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignEnd="@+id/textViewURL"
        android:layout_toEndOf="@+id/textView3"
        android:layout_above="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredientsLabel"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:id="@+id/textViewIngredient"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginRight="30dp"
        android:text="@string/ingredients"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewIngredient"
        android:layout_below="@+id/textViewIngredient"
        android:layout_marginTop="24dp"
        android:text="@string/URLlabel"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/URLlabel" />

    <TextView
        android:id="@+id/textViewURL"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView3"
        android:onClick="makeClickable"
        android:text="@string/URL"
        android:textSize="18sp"
        android:autoLink="web"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/black"
        tools:text="@string/URL"
        android:layout_above="@+id/buttonFinish" />
</RelativeLayout>