<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.salman.inclass08.RecipePuppyFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/editTextDish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dish" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/editTextDish"
        android:layout_alignParentStart="true"
        android:text="Dish"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_below="@+id/editTextDish"
        android:layout_alignParentStart="true"
        android:layout_marginTop="67dp" />

    <LinearLayout
        android:id="@+id/linearLayoutVertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">

            <ImageButton
                android:id="@+id/imageButtonMinus"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/remove"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/editTextMenuPermanent"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="19dp"
        android:layout_weight="5.35"
        android:ems="20"
        android:inputType="textPersonName"
        android:text="@string/edit_text_words"
        android:layout_below="@+id/lineaLayout"
        android:layout_toEndOf="@+id/textView" />

    <ImageButton
        android:id="@+id/imageButtonAddPermanent"
        android:layout_width="wrap_content"
        android:layout_below="@+id/lineaLayout"
        android:layout_height="49dp"
        android:layout_alignEnd="@+id/editTextDish"
        android:layout_alignTop="@+id/editTextMenuPermanent"
        android:background="@null"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/textView4"
        android:id="@+id/lineaLayout"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyelerViewMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="41dp"
        android:text="Search"
        android:layout_alignEnd="@+id/editTextMenuPermanent"
        android:layout_toEndOf="@+id/textView4" />
    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/recyclerViewMenu"-->
        <!--&lt;!&ndash;android:layout_below=""&ndash;&gt;-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->
</RelativeLayout>
